--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Light.NoTitleBar" >
         <activity
-            android:name=".WineNotesActivity"
+            android:name=".WineListActivity"
             android:label="@string/app_name"
             android:screenOrientation="nosensor" >
             <intent-filter>
