--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:theme="@style/Theme.Light.NoTitleBar" >
         <activity
             android:name=".WineListActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="nosensor" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,24 +28,20 @@
         </activity>
         <activity
             android:name=".EditWineActivity"
-            android:label="Edit wine"
-            android:screenOrientation="nosensor" >
+            android:label="Edit wine" >
         </activity>
         <activity
             android:name=".ViewWineActivity"
-            android:label="Wine"
-            android:screenOrientation="nosensor" >
+            android:label="Wine" >
         </activity>
         <activity
             android:name=".FileSelectorActivity"
             android:label="File Selector"
-            android:screenOrientation="nosensor"
             android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".EditAromaImpressionsActivity"
             android:label="Aroma Impressions"
-            android:screenOrientation="nosensor"
             android:theme="@android:style/Theme.Dialog" >
         </activity>
     </application>
