--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <application
+        android:name=".WineNotesApplication"
         android:icon="@drawable/launcher_main"
         android:label="@string/app_name"
         android:theme="@style/Theme.Light.NoTitleBar" >
