--- a/full/AndroidManifest.xml
+++ b/full/AndroidManifest.xml
@@ -16,11 +16,11 @@
     <application
         android:name="com.winenotes.WineNotesApplication"
         android:icon="@drawable/launcher_main"
-        android:label="Wines"
+        android:label="Wines Notes"
         android:theme="@style/Theme.Light.NoTitleBar" >
         <activity
             android:name="com.winenotes.WineListActivity"
-            android:label="@string/app_name" >
+            android:label="Wines" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
