added android studio files, will remove and ignore later the ones where makes sense

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ local.properties
 winenotes-full/keys/
 winenotes-lite/keys/
 # Intellij project files
-*.iml
-*.ipr
-*.iws
-.idea/
+#*.iml
+#*.ipr
+#*.iws
+#.idea/
