--- a/winenotes-lite/AndroidManifest.xml
+++ b/winenotes-lite/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
     <application
         android:name="com.winenotes.application.WineNotesApplication"
+        android:allowBackup="false"
         android:icon="@drawable/launcher_main"
         android:label="Wines Notes"
         android:theme="@style/Theme.Light.NoTitleBar" >
