--- a/winenotes-lite/AndroidManifest.xml
+++ b/winenotes-lite/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <application
-        android:name="com.winenotes.application.WineNotesApplication"
+        android:name="com.winenotes.application.WineNotesLiteApplication"
         android:allowBackup="false"
         android:icon="@drawable/launcher_main"
         android:label="Wines Notes"
