use light theme for tag editors

--- a/winenotes-lite/AndroidManifest.xml
+++ b/winenotes-lite/AndroidManifest.xml
@@ -39,27 +39,27 @@
         <activity
             android:name="com.winenotes.tools.FileSelectorActivity"
             android:label="File Selector"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Theme.Dialog" >
         </activity>
         <activity
             android:name="com.winenotes.activity.EditGrapesActivity"
             android:label="Grape / Cépage"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Theme.Dialog" >
         </activity>
         <activity
             android:name="com.winenotes.activity.EditAromaImpressionsActivity"
             android:label="Aroma Impressions"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Theme.Dialog" >
         </activity>
         <activity
             android:name="com.winenotes.activity.EditTasteImpressionsActivity"
             android:label="Taste Impressions"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Theme.Dialog" >
         </activity>
         <activity
             android:name="com.winenotes.activity.EditAftertasteImpressionsActivity"
             android:label="Aftertaste Impressions"
-            android:theme="@android:style/Theme.Dialog" >
+            android:theme="@style/Theme.Dialog" >
         </activity>
     </application>
 
