get project name from first include

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
-// projectname: winenotes
-//include ':winenotes-common'
+// note: ./scripts/build.sh detects the project name from the first include
 include ':winenotes'
+//include ':winenotes-common'
 include ':winenotes-lite'
 //include ':winenotes-full'
