--- a/winenotes/graphics/Makefile
+++ b/winenotes/graphics/Makefile
@@ -1,7 +1,7 @@
 src_dir:=src
-hdpi_dir:=../res/drawable-hdpi
-ldpi_dir:=../res/drawable-ldpi
-mdpi_dir:=../res/drawable-mdpi
+hdpi_dir:=../src/main/res/drawable-hdpi
+ldpi_dir:=../src/main/res/drawable-ldpi
+mdpi_dir:=../src/main/res/drawable-mdpi
 
 names:=$(patsubst $(src_dir)/%,%,$(wildcard $(src_dir)/*.png $(src_dir)/*.jpg))
 hdpi_target:=$(patsubst %,$(hdpi_dir)/%,$(names))
@@ -9,6 +9,9 @@ ldpi_target:=$(patsubst %,$(ldpi_dir)/%,$(names))
 mdpi_target:=$(patsubst %,$(mdpi_dir)/%,$(names))
 launchpad_target:=launchpad/icon.png launchpad/logo.png launchpad/brand.png
 market_target:=market/android.png
+promo_target:=market/promo.png
+canvas:=market/canvas.png
+work:=market/work.png
 
 default: all
 
@@ -25,10 +28,12 @@ lp launchpad: $(launchpad_target)
 
 market: $(market_target)
 
-all: hdpi ldpi mdpi launchpad market
+promo: $(promo_target)
+
+all: hdpi ldpi mdpi launchpad market promo
 
 clean: 
-	rm $(hdpi_target) $(ldpi_target) $(mdpi_target) $(launchpad_target) $(market_target)
+	rm $(hdpi_target) $(ldpi_target) $(mdpi_target) $(launchpad_target) $(market_target) $(promo_target)
 
 $(hdpi_dir)/tab_%.png: $(src_dir)/tab_%.png
 	convert -geometry 48x $< $@
@@ -134,4 +139,10 @@ market/android.png: $(src_dir)/launcher_main.png
 	convert -geometry 512x $< $@
 	identify $@
 
-# eof
+market/promo.png: $(src_dir)/launcher_main.png
+	@mkdir -p $(@D)
+	convert -size 1024x500 xc:transparent $(canvas)
+	convert -geometry 1024x500 $< $(work)
+	convert -composite $(canvas) $(work) -gravity west $@
+	identify $@
+
