--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:0.12.2'
     }
 }
 
-ext.compileSdkVersion = 4
-ext.buildToolsVersion = "19"
+ext.compileSdkVersion = 19
+ext.buildToolsVersion = "20"
 ext.storeFilePath = System.getenv('STORE_FILE')
 ext.storePassword = System.getenv('STORE_PASSWORD')
 ext.keyAlias = System.getenv('KEY_ALIAS')
