--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@
 include ':winenotes'
 //include ':winenotes-common'
 include ':winenotes-lite'
-//include ':winenotes-full'
+include ':winenotes-full'
