--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,23 @@
-buildscript {
+allprojects {
     repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
-ext.compileSdkVersion = 19
-ext.buildToolsVersion = "20"
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.1.0'
+    }
+}
+
+ext.compileSdkVersion = 27
 ext.storeFilePath = System.getenv('STORE_FILE')
 ext.storePassword = System.getenv('STORE_PASSWORD')
 ext.keyAlias = System.getenv('KEY_ALIAS')
