--- a/winenotes/build.gradle
+++ b/winenotes/build.gradle
@@ -1,6 +1,41 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.application'
+
+dependencies {
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+}
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion rootProject.buildToolsVersion
+
+    flavorDimensions "mode"
+
+    productFlavors {
+        lite {
+            dimension "mode"
+            applicationIdSuffix ".lite"
+            versionNameSuffix "-lite"
+        }
+
+        full {
+            dimension "mode"
+            applicationIdSuffix ".full"
+            versionNameSuffix "-full"
+        }
+    }
+
+    if (rootProject.storeFilePath) {
+        signingConfigs {
+            release {
+                storeFile file(rootProject.storeFilePath)
+                storePassword rootProject.storePassword
+                keyAlias rootProject.keyAlias
+                keyPassword rootProject.keyPassword
+            }
+        }
+        buildTypes {
+            release {
+                signingConfig signingConfigs.release
+            }
+        }
+    }
 }
