--- a/winenotes/build.gradle
+++ b/winenotes/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
+    testImplementation 'junit:junit:4.11'
 }
 
 android {
